--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,15 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+				"fzaninotto/faker": "v1.4.*"
 	},
 	"autoload": {
 		"classmap": [
 			"database"
+		],
+		"files": [
+			"app/helpers.php"
 		],
 		"psr-4": {
 			"App\\": "app/"
